--- a/conference.css
+++ b/conference.css
@@ -3,8 +3,8 @@ Main Stylesheet
 
 Project:    Highpoint Corporate Template
 Version:    1.0
-Last change:    23/07/2021
-Author:    Themewiz
+Last change:    29/10/2021
+Author:    creativemaze
 Primary use:    Conference
 -------------------------------------------------------------------*/
 
@@ -118,23 +118,30 @@ ul{
 
 /* 2. HEADER
  ----------- */
+ 
 /* --- 2.1. Logo & Navigation --- */
-.navbar-header h2{
+nav.navbar.bootsnav .navbar-brand{
+    max-width: 200px !important; 	
+}
+
+.navbar-header a.navbar-brand{
+	text-decoration: none;
+	color: #ffffff;
+	transition: 0.5s;
 	font-family: 'Montserrat', Arial, sans-serif;
 	font-size: 22px;
 	font-weight: 700;
 	letter-spacing: 1px;
 	text-transform: uppercase;
+	padding-top: 28px;
 }
 
-.navbar-header a.navbar-brand{
-	text-decoration: none;
-	color: #ffffff !important;
-	transition: 0.5s;
+.navbar-header a.navbar-brand:hover{
+	color: #ffffff;
 }
 
 nav.navbar .navbar-brand img.logo{
-   max-width: 200px;
+   width: 100%;
    height: auto;
    display: block;
 }
@@ -385,7 +392,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
     text-decoration: none;
 	text-transform: uppercase;
     display: block;
-    font-size: 12px;
+    font-size: 13px;
 	font-weight: 600;
 	font-family: 'Montserrat', Arial, sans-serif;
     transition: 0.5s;
@@ -531,7 +538,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 
 .header-title__sub{
 	font-family: 'Roboto' , Arial, sans-serif;
-	font-size: 16px;
+	font-size: 18px;
 	font-weight: normal;
 	max-width: 500px;
 	display: block;
@@ -589,20 +596,18 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	width: 100%;
 }
 
-.bg_col{
-	padding: 0 15px;
-	margin-top: 25px;
-}
-
 .bg_box{
 	position: relative;
 	text-align: center;
-	overflow: hidden;
 	margin: auto;
 	min-height: 150px;
-	transition: 0.5s;
 	margin-bottom: 10px;
-	border: solid 1px #e0e0e0;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 10px 0 rgba(0, 0, 0, 0.19);
+}
+
+.bg_slide{
+	padding: 0 15px;
+	margin-top: 25px;
 }
 
 .bg_image img{
@@ -620,7 +625,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 .bg_group{
 	overflow: hidden;
 	position: relative;
-	padding-bottom: 12px;
+	padding-bottom: 0;
 	padding-right: 12px;
 	padding-top: 12px;
 	padding-left: 12px;
@@ -640,25 +645,18 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	display: inline-block;
 }
 
-.bg_image > a > img{
-	transition: ease-in-out 1.25s;
-}
-
-.bg_image:hover > a > img{
-	transform: scale(1.15);
-}
-
-.bg_name h3 a{
+.bg_name h3{
 	font-family: 'Montserrat' , Arial, sans-serif;
-	font-size: 20px;
+	font-size: 15px;
 	display: inline-block;
 	font-weight: normal;
+	text-transform: uppercase;
 	color: #005AA7;
 	letter-spacing: 1px;
 	text-align: center;
 	line-height: 1.4em;
-	margin-top: -20px;
 	text-decoration: none;
+	margin: 0;
 }
 
 .lastword{
@@ -720,15 +718,15 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	min-height: 450px;
 	height: 100%;
 	background-color: #005AA7;
-	margin: 0 0;
+	margin: 0;
 }
 
 /* --- 3.3. Conference Area Three --- */
 .conference_area_three{
-	max-width: 1280px;
+	max-width: 1400px;
 	min-height: 300px;
 	margin: 0 auto;
-	padding: 0 15px;
+	padding: 0 25px;
 	margin-top:  -325px;
 	position: relative;
 	z-index: 9999;
@@ -827,7 +825,6 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	text-align: center;
 	padding: 10px;
 	border: solid 1px #0083B0;
-	border-radius: 4px;
 	margin-bottom: 15px;
 }
 
@@ -993,7 +990,6 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	padding: 0;
 	text-align: left;
 	background: transparent;
-	transition: 0.5s;
 }
 
 .feature_box h2{
@@ -1108,7 +1104,6 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	overflow: hidden;
 	margin: auto;
 	min-height: 150px;
-	transition: 0.5s;
 }
 
 .team_image img{
@@ -1169,22 +1164,41 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	letter-spacing: 1px;
 	text-align: left;
 	padding: 5px 0;
+	opacity: 1;
 }
 
 .team_image:hover .team_icon .fab,
-.team_image:hover .team_icon .fa,
-.team_image:hover .team_name{
+.team_image:hover .team_icon .fa{
 	color: #005AA7;
 }
 
-.box_button{
-	max-width: 300px;
-	margin:  0 auto;
+.team_title{
+	font-family: 'Montserrat' , Arial, sans-serif;
+	font-size: 17px;
+	display: block;
+	font-weight: 600;
+	color: #005AA7;
+	text-transform: uppercase;
+	letter-spacing: 1px;
+	text-align: left;
+	line-height: 1.4em;
+	padding-top: 10px;
+	opacity: 0;
+	display: none;
+}
+
+.team_image:hover .team_name{
+	opacity: 0;
+}
+
+.team_image:hover .team_title{
+	opacity: 1;
+	display: block;
 }
 
 .box_button a{
 	background-color: #ffffff;
-	width: 190px;
+	width: 180px;
 	min-height: 25px;
 	margin: auto;
 	margin-top: 35px;	
@@ -1220,19 +1234,19 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 }
 
 .conference_group_six{
-	max-width: 1400px;
+	max-width: 1280px;
 	width: 100%;
 	margin: 0 auto;
 	display: flex;
 	flex-wrap: wrap;
-	padding-top: 30px;
+	padding-top: 40px;
 	padding-bottom: 30px;
 }
 
 .blog_col{
 	flex: 33.33%;
 	width: 33.33%;
-	padding: 0 30px;
+	padding: 0 20px;
 }
 
 .blog_box{
@@ -1242,7 +1256,6 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	overflow: hidden;
 	margin: auto;
 	min-height: 150px;
-	transition: 0.5s;
 }
 
 .blog_image{
@@ -1262,21 +1275,19 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 }
 
 .blog_content{
-	padding: 25px 0;
 	text-align: left;
-	padding-left: 15px;
-	padding-right: 5px;
+	padding: 20px 0;
+	padding-left: 10px;
 }
 
 .date_info{
 	position: absolute;
-	top: 0;
+	bottom: 0;
 	left: 0;
 	margin-left: 15px;
-	margin-top: 15px;
+	margin-bottom: 15px;
 	background-color: #ffffff;
-	padding: 5px 20px;
-	border-radius: 4px;
+	padding: 8px 20px;
 }
 
 .date_info h4{
@@ -1288,6 +1299,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	text-transform: uppercase;
 	letter-spacing: 1px;
 	text-align: center;
+	margin: 0;
 }
 
 .blog_date{
@@ -1320,7 +1332,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	text-align: left;
 	text-decoration: none;
 	transition: 0.5s;
-	line-height: 1.3em;
+	line-height: 1.4em;
 }
 
 a.blog_btn:hover,
@@ -1343,7 +1355,6 @@ a.blog_btn:hover,
 a.blog_btn{
 	max-width: 120px;	
     color: #111111;
-	border-bottom: solid 2px #111111;
     text-decoration: none;
 	text-transform: uppercase;
     display: inline-block;
@@ -1355,7 +1366,6 @@ a.blog_btn{
 	letter-spacing: 1px;
 	text-align: center;
 	line-height: 1.2em;
-	padding-bottom: 3px;
 }
 
 a.blog_btn::after{
@@ -1369,7 +1379,6 @@ a.blog_btn::after{
 	top: 1px;
 	position: relative;
 }
-
 /* --- 3.7. Conference Area Seven --- */
 .conference_area_seven{
 	position: relative;
@@ -1491,10 +1500,10 @@ a.blog_btn::after{
 	padding: 10px 30px;
 	text-align: center;
 	font-family: 'Montserrat' , Arial, sans-serif;
-	font-size: 15px;
-	font-weight: normal;
+	font-size: 14px;
+	font-weight: 500;
 	color: #ffffff;
-	border-radius: 5px;
+	text-transform: uppercase;
 	letter-spacing: 1px;
 	background-color: #005AA7;
 	border: solid 1px #005AA7;
@@ -1502,9 +1511,9 @@ a.blog_btn::after{
 }
 
 .form_box input[type="submit"]:hover{
-	background-color: #111111;
-	color: #ffffff;
-	border: solid 1px #111111;
+	background: transparent;
+	color: #111111;
+	border-color: #111111;
 }
 
 .video_col img{
@@ -1591,12 +1600,6 @@ a.blog_btn::after{
 .conference_group_nine{
 	width: 100%;
 	padding-top: 20px;
-}
-
-.conference_group_nine .slick-slider {
-	width: 100%;
-	margin: auto;
-	display: block;
 	text-align: center;
 }
 
@@ -1611,7 +1614,7 @@ a.blog_btn::after{
 
 .client_box{
 	width: 100%;
-	padding: 20px 30px;
+	padding: 30px;
 	overflow: hidden;
 	text-align: center;
 	display: block;
@@ -1716,9 +1719,9 @@ a.blog_btn::after{
 	width: 1.3rem;
 	height: 1.3rem;
 	padding: 0;		
-	border: solid 1px #696969;
+	border: solid 1px #005AA7;
 	border-radius: 100%;
-	background-color: transparent;
+	background: transparent;
 	text-indent: -9999px;
 }
 
@@ -1736,37 +1739,50 @@ li.slick-active button{
 
 /* --- 3.10. Conference Area Ten --- */
 .conference_area_ten{
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-	min-height: 350px;
+	max-width: 1280px;
+	margin: 0 auto 2em;
+	padding: 0 35px;
+	position: relative;
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center;
+}
+
+.conference_area_ten::before {
+	content: '';
+	position: absolute;
+	z-index: 1;
+	top: 0;
+	left: 0;
+	width: 100%;
 	height: 100%;
-	margin-bottom: 2em;
-	padding: 3em 0;
-	background-color: #005AA7;
+	background: rgba(24, 25, 34, 0.6);
 }
 
 .conference_group_ten{
-	position: relative;
-	z-index: 5;
-	padding: 0 25px;
-	max-width: 1280px;
-	margin: auto;
 	width: 100%;
 	display: flex;
 	flex-wrap: wrap;
-}
-
-.col_head{
-	flex: 50%;
-	width: 50%;
+	padding: 4em 25px;
 }
 
 .col_info{
-	flex: 50%;
-	width: 50%;
-	margin-top: 15px;
+	flex: 100%;
+	width: 100%;
+	position: relative;
+	z-index: 9999;
+}
+	
+.col_head{
+	flex: 100%;
+	width: 100%;
+	position: relative;
+	z-index: 9999;
+}
+
+.subscribe-row{
+	text-align: center;
+	margin-top: 35px;
 }
 
 .col_head h3{
@@ -1776,14 +1792,10 @@ li.slick-active button{
 	font-weight: 500;
 	color: #ffffff;
 	letter-spacing: 1px;
-	text-align: left;
+	text-align: center;
 	line-height: 1.3em;
-	max-width: 500px;
-	margin-top: 0;
-}
-
-.subscribe-row{
-	text-align: right;
+	max-width: 600px;
+	margin: auto;
 }
 
 .col_info input[type="email"]{
@@ -1811,17 +1823,18 @@ li.slick-active button{
 	text-transform: uppercase;
 	margin: 0;
 	margin-left: -4px;
-	color: #005AA7;
+	color: #ffffff;
 	border-radius: 0;
 	letter-spacing: 1px;
-	background-color: #ffffff;
-	border: solid 1px #ffffff;
+	background-color: #005AA7;
+	border: solid 1px #005AA7;
 	transition: 0.5s;
 }
 
 .col_info input[type="submit"]:hover{
-	background-color: #005AA7;
+	background: transparent;
 	color: #ffffff;
+	border-color: #ffffff;
 }
 
 /* 4. FOOTER
@@ -2009,41 +2022,19 @@ a.footer-brand img{
 	.conference_right_info_col{
 		flex: 100%;
 		width: 100%;
-		padding-top: 30px;
+		margin-top: 30px;
 	}
 	
 	.feature_col{
 		flex: 50%;
 		width: 50%;
-		min-height: 450px;
+		min-height: 400px;
 	}
 	
 	.blog_col{
 		flex: 50%;
 		width: 50%;
 		margin-bottom: 40px;
-	}
-	
-	.col_info{
-		flex: 100%;
-		width: 100%;
-		margin-top: 0;
-	}
-	
-	.col_head{
-		flex: 100%;
-		width: 100%;
-	}
-	
-	.subscribe-row{
-		text-align: center;
-		margin-top: 35px;
-	}
-	
-	.col_head h3{
-		text-align: center;
-		width: 100%;
-		margin: auto;
 	}
 }
 
@@ -2061,8 +2052,8 @@ a.footer-brand img{
 		transform: translateX(-50%);
 	}
 	
-	.navbar-header h2{
-		margin-top: 7px;
+	.navbar-header a.navbar-brand{
+		padding-top: 22px;
 	}
 	
 	nav.navbar.bootsnav ul.nav > li > a{
@@ -2137,7 +2128,7 @@ a.footer-brand img{
 	}
 	
 	.first_left{
-		min-height: 700px;
+		min-height: 650px;
 		padding-top: 130px;
 	}
 	
@@ -2154,6 +2145,8 @@ a.footer-brand img{
 	.video_col{
 		flex: 100%;
 		width: 100%;
+		max-width: 650px;
+		margin: auto;
 	}
 	
 	.form_col{
@@ -2223,6 +2216,18 @@ a.footer-brand img{
 		width: 100%;
 	}
 	
+	.col_info input[type="email"]{
+		display: block;
+		width: 100%;
+	}
+	
+	.col_info input[type="submit"]{
+		margin-top: 20px;
+		display: block;
+		width: 100%;
+		margin-left: 0;
+	}
+	
 	.footer_col{
 		flex: 100%;
 		width: 100%;
@@ -2242,10 +2247,6 @@ a.footer-brand img{
 		padding-right: 0;
 	}
 	
-	.bg_name{
-		width: 240px;
-	}
-	
 	.conference_group_three{
 		padding-left: 20px;
 		padding-right: 20px;
@@ -2260,20 +2261,16 @@ a.footer-brand img{
 		font-size: 15px;
 	}
 	
-	.col_info input[type="email"]{
-		display: block;
-		width: 100%;
-	}
-	
-	.col_info input[type="submit"]{
-		margin-top: 20px;
-		display: block;
-		width: 100%;
-		margin-left: 0;
+	.col_head h3{
+		font-size: 25px;
 	}
 }
 
 @media only screen and (max-width: 385px){
+	.bg_name{
+		width: 230px;
+	}
+	
 	.client_info img{
 		width: 60px;
 		height: 60px;
@@ -2282,18 +2279,29 @@ a.footer-brand img{
 	.client_box{
 		padding: 30px 15px;
 	}
-	
-	.col_head h3{
-		font-size: 25px;
-	}
 }
 
 @media only screen and (max-width: 320px){
 	.bg_name{
-		width: 210px;
+		width: 190px;
 	}
 	
-	.bg_name h3 a{
-		font-size: 18px;
+	.bg_slide{
+		padding-left: 10px;
+		padding-right: 10px;
+	}
+	
+	.info_col_area,
+	.info_content{
+		padding-left: 10px;
+	}
+	
+	.day_col{
+		max-width: 45px;
+		padding: 6px;
+	}
+	
+	.day_col h3{
+		font-size: 13px;
 	}
 }
