--- a/contact-us.css
+++ b/contact-us.css
@@ -1,9 +1,9 @@
 /*------------------------------------------------------------------
 Main Stylesheet
 
-Project:    HighPoint - Multipurpose Business Template
+Project:    Upstake - Multipurpose Business Template
 Version:    1.0
-Last change:    26/01/2022
+Last change:   03/09/2024
 Author:    creativemaze
 Primary use:    Page
 -------------------------------------------------------------------*/
@@ -18,8 +18,6 @@ Primary use:    Page
 3. Main Content
 	3.1. Contact Area One 
 	3.2. Contact Area Two
-	3.3. Contact Area Three
-	3.4. Contact Area Four
 	 
 4. Footer
 5. Responsive
@@ -89,30 +87,34 @@ ul{
  ----------- */
  
 /* --- 2.1. Logo & Navigation --- */
-nav.navbar.bootsnav .navbar-brand{
-    max-width: 200px; 	
-}
-
-.navbar-header a.navbar-brand{
+.navbar-header > a{
 	text-decoration: none;
-	color: #ffffff;
+	color: #f1f1f1;
 	transition: 0.5s;
 	font-family: 'Montserrat', Arial, sans-serif;
 	font-size: 22px;
 	font-weight: 700;
+	display: inline-block;
+	text-align: center;
 	letter-spacing: 1px;
 	text-transform: uppercase;
-	padding-top: 30px;
+	margin-top: 30px;
 }
 
-.navbar-header a.navbar-brand:hover{
-	color: #ffffff;
+.navbar-header > a:hover{
+	color: #f1f1f1;
 }
 
-nav.navbar .navbar-brand img.logo{
-   width: 100%;
+#nav-logo > a{
+	max-width: 160px; 
+	position: relative;
+	top: 33px;
+}
+
+#nav-logo > a img{
+   position: relative;
+   max-width: 160px;
    height: auto;
-   display: block;
 }
 
 nav.navbar.bootsnav{
@@ -123,6 +125,7 @@ nav.navbar.bootsnav{
 
 nav.navbar.bootsnav ul.nav{
 	margin-right: 160px;
+	margin-top: 5px;
 }
 
 nav.navbar.bootsnav li.dropdown ul.dropdown-menu{
@@ -154,7 +157,7 @@ nav.navbar.bootsnav ul.navbar-right li.dropdown ul.dropdown-menu li a{
 }
 
 nav.navbar.bootsnav ul.navbar-right li.dropdown ul.dropdown-menu li a:hover{
-	color: #009fff;
+	color: #1488cc;
 }
 
 nav.navbar.bootsnav li.dropdown ul.dropdown-menu{
@@ -197,14 +200,14 @@ nav.navbar.bootsnav ul.dropdown-menu.megamenu-content .content ul.menu-col li a{
 }
 
 nav.navbar.bootsnav ul.dropdown-menu.megamenu-content .content ul.menu-col li a:hover{
-	color: #009fff;
+	color: #1488cc;
 }
 
 nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
     font-size: 14px;
     font-weight: 600;
 	font-family: 'Montserrat' , Arial, sans-serif;
-    color: #009fff;
+    color: #1488cc;
     text-transform: uppercase;
 	letter-spacing: 1px;
 }
@@ -218,7 +221,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 
 .attr-nav > ul > li > a{
     color: #ffffff;
-	padding-top: 30px;
+	padding-top: 36px;
 	margin-left: -12px;
 	position: relative;
 	left: -160px;
@@ -235,7 +238,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 .top_box{
 	height: 50px;
 	overflow-y: auto;
-	border-bottom: solid 1px #6f6f6f;
+	border-bottom: solid 1px #e0e0e0;
 }
 
 .top_info{
@@ -270,7 +273,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 
 .left_info .fas,
 .left_info .far,
-.right_info .fab{
+.right_info > a > .fab{
 	font-size: 16px;
 	color: #ffffff;
 }
@@ -280,13 +283,13 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	padding-right: 8px;
 }
 
-.right_info > a{
+.right_info > a > .fab{
 	padding-right: 14px;
+	transition: 0.5s;
 }
 
-.left_info .fas:hover,
-.right_info .fab:hover{
-	opacity: 0.6;
+.right_info > a > .fab:hover{
+	color: #1488cc;
 }
 
 .sub_width{
@@ -325,16 +328,14 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	max-width: 300px;
 	display: inline-block;
 	position: absolute;
-	top: 15px;
+	top: 19px;
 	right: 0;
 }
 
 .head_btn a{
-	background-color: #009fff;
+	background-color: #1488cc;
 	width: 150px;
 	margin: 0 auto;
-	min-height: 30px;
-    border: none;
     color: #ffffff;
     padding: 12px 14px;
     text-decoration: none;
@@ -344,16 +345,15 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	font-weight: 600;
 	font-family: 'Montserrat', Arial, sans-serif;
     transition: 0.5s;
-    cursor: pointer;
-	border: 1px solid #009fff;
+	border: 1px solid #1488cc;
 	letter-spacing: 1px;
 	text-align: center;
 }
 
 .head_btn a:hover{
-	color: #111111;
 	background-color: #ffffff;
-	border-color: #ffffff;
+	color: #111111;
+	border-color: #ffffff; 
 }
 
 .sliderwrap{
@@ -364,19 +364,18 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 .header__content{
 	display: flex;
 	flex-direction: column;
-	justify-content:  center;
+	justify-content: center;
 	align-items: center;
-	min-height: 500px;
+	min-height: 600px;
 }
 
 .slide__content{
-	min-height: 450px;
-	text-align: center;
+	position: relative;
+	z-index: 1;
+	min-height: 600px;
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center;
-	position: relative;
-	z-index: 1000;
 }
 
 .slide__content:before {
@@ -392,7 +391,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 }
 
 .header-title {
-	max-width: 600px;
+	max-width: 700px;
 	display: block;
 	padding: 0 20px;
 }
@@ -405,41 +404,37 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	text-align: center;
 	display: block;
 	color: #ffffff;
-	line-height: 1.3em;
+	line-height: 1.2em;
 }
 
 .header-title__sub{
 	font-family: 'Roboto' , Arial, sans-serif;
-	font-size: 18px;
+	font-size: 15px;
 	font-weight: normal;
 	display: block;
-	color: #f2f2f2;
-	line-height: 1.4em;
+	color: #dddddd;
+	line-height: 1.5em;
 	letter-spacing: 1px;
 	text-align: center;
-	max-width: 550px;
-	padding-top: 25px;
-	margin: auto;
+	text-transform: uppercase;
+	padding: 15px 0;
 }
 
 /* 3. MAIN CONTENT
  ----------- */
- 
 /* --- 3.1. Contact Area One --- */
 .contact_area_one{
-	max-width: 1200px;
-	margin: 0 auto 1.5em;
-	margin-top:  -200px;
 	position: relative;
-	z-index: 9999;
-	padding: 0 30px;
+	z-index: 99;
+	max-width: 1050px;
+	margin: -215px auto 7em;
+	padding: 0 25px;
 }
 
 .contact_group_one{
 	width: 100%;
 	display: flex; 
 	flex-wrap: wrap;
-	padding: 20px 15px 0;
 	background-color: #ffffff;
 }
 
@@ -451,40 +446,26 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 
 .bg_box{
 	max-width: 350px;
-	margin: auto;
-	padding: 25px 15px;
+	margin: 0 auto;
 	text-align: center;
-	min-height: 50px;
-	height: 100%;
+	padding: 30px 0 15px;
 	overflow: auto;
+	min-height: 30px;
 }
 
-.bg_icon{
-	float: left;
-	width: 15%;
-}
-
-.bg_info{
-	float: left;
-	width: 85%;
-	padding-left: 5px;
-}
-
-.bg_icon .fas,
-.bg_icon .far{
-	font-size: 30px;
-	color: #009fff;
-	text-align: left;
+.bg_box .fi{
+	font-size: 44px;
+	color: #1488cc;
 	display: block;
+	text-align: left;
 }
 
-.bg_info h3{
+.bg_box h3{
 	font-family: 'Montserrat' , Arial, sans-serif;
-	font-size: 15px;
+	font-size: 18px;
 	font-weight: 600;
 	display: block;
 	text-align: left;
-	text-transform: uppercase;
 	color: #111111;
 	letter-spacing: 1px;
 	line-height: 1.4em;
@@ -492,72 +473,61 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	padding-bottom: 5px;
 }
 
-.bg_info p{
+.bg_box p{
 	font-family: 'Roboto' , Arial, sans-serif;
-	font-size: 14px;
+	font-size: 15px;
 	font-weight: normal;
 	display: block;
 	color: #696969;
 	letter-spacing: 1px;
 	text-align: left;
-	line-height: 1.5em;
-	margin: 0;
-	padding-bottom: 4px;
+	line-height: 1em;
 }
 
-.bg_info a{
+.bg_box a{
 	font-family: 'Montserrat' , Arial, sans-serif;
-	font-size: 13px;
+	font-size: 14px;
 	font-weight: 600;
 	text-transform: lowercase;
 	display: inline-block;
-	color: #009fff;
+	color: #1488cc;
 	letter-spacing: 1px;
-	text-align: right;
+	text-align: center;
 	text-decoration: none;
 }
 
-.bg_info a:hover{
+.bg_box a:hover{
 	color: #111111;
 }
 
 /* --- 3.2. Contact Area Two --- */
 .contact_area_two{
-	width: 100%;
-	height: 400px;
-	margin-bottom: 9em;
+	max-width: 1200px;
+	margin: 0 auto -14em;
+	padding: 0 25px;
 	position: relative;
-	padding: 0 5px;
+	z-index: 999;
 }
 
 .contact_group_two{
-	position:relative;
-	height: 400px;
-	width: 100%;
-}
-
-.contact_group_two iframe{
-	height:100%;
-	width:100%;
-	border: none;
-}
-
-/* --- 3.3. Contact Area Three --- */
-.contact_area_three{
-	max-width: 1280px;
-	margin: 0 auto 7em;
-	padding: 0 25px;
-}
-
-.contact_group_three{
 	width: 100%;
 	display: flex;
 	flex-wrap: wrap;
+	padding: 10px;
+	background-color: #ffffff;
+	box-shadow: 0 20px 70px rgba(38,42,76,.2);
+	min-height: 500px;
 }
 
-.contact_form_col{
+.area_col{
 	flex: 50%;
 	width: 50%;
+}
+
+.form_col{
+	flex: 50%;
+	width: 50%;
+	min-height: 500px;
 }
 
 .form_area{
@@ -567,63 +537,36 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	align-items: center;
 }
 
-.form_col_box{
-	max-width: 450px;
-	text-align: left;
-}
-
-.form_col_box h2{
-	font-family: 'Montserrat' , Arial, sans-serif;
-	font-size: 40px;
-	font-weight: 700;
-	letter-spacing: 1px;
-	text-align: left;
-	display: block;
-	color: #111111;
-	line-height: 1.3em;
-}
-
-.form_col_box p{
-	font-family: 'Roboto' , Arial, sans-serif;
-	font-size: 16px;
-	font-weight: normal;
-	display: block;
-	color: #696969;
-	letter-spacing: 1px;
-	text-align: left;
-	padding: 12px 0;
-	line-height: 1.5em;
-}
-
-.form-box{
-	text-align: right;
-	display: block;
+.area_box{
 	max-width: 600px;
+	margin: 0 auto;
+	position: relative;
+	text-align: center;
+	height: 500px;
 }
 
-.inner_list > ul{
-	margin-top: 20px;
+.area_box iframe{
+	height: 100%;
+	width: 100%;
+	border: none;
 }
 
-.inner_list > ul > li{
+.form_box{
+	width: 100%;
+	padding: 20px 25px;
+}
+
+.form_box h3{
 	font-family: 'Montserrat' , Arial, sans-serif;
-	font-size: 13px;
-	font-weight: 500;
+	font-size: 30px;
+	font-weight: 700;
 	display: block;
 	color: #111111;
-	text-transform: capitalize;
-	text-align: left;
-	padding: 8px 0;
+	text-align: center;
 	letter-spacing: 1px;
-}
-
-.inner_list > ul > li::before{
-	font-family: 'Font Awesome 5 Free';
-	content: "\f00c";
-	font-weight: 900;
-	font-size: 15px;
-	padding-right: 12px;
-	color: #009fff;
+	line-height: 1.2em;
+	margin-top: 0;
+	padding-bottom: 10px;
 }
 
 .form-row {
@@ -631,120 +574,70 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	display: flex;
 }
 
-.form-box input[type="text"],
-.form-box input[type="email"]{
+.form_box input[type="text"],
+.form_box input[type="email"]{
 	font-family: 'Montserrat' , Arial, sans-serif;
 	font-size: 13px;
-	padding: 7px 20px;
+	font-weight: 500;
+	padding: 7px 5px;
 	height: 40px;
 	border: none;
-	margin: 8px 0;
-	border: solid 1px #e0e0e0;
+	margin: 10px 0;
 	flex-grow: 1;
 	letter-spacing: 1px;
-	transition: 0.5s;
+	border-bottom: solid 1px #6f6f6f;
 }
 
-.form-box textarea{
+#right-space{
+	margin-right: 10px;
+}
+
+#left-space{
+	margin-left: 10px;
+}
+
+.form_box textarea{
 	font-family: 'Montserrat' , Arial, sans-serif;
 	font-size: 13px;
-	padding: 7px 20px;
+	font-weight: 500;
+	padding: 7px 5px;
 	border: none;
 	width: auto;
-	min-height: 125px;
-	margin: 8px 0;
-	border: solid 1px #e0e0e0;
+	min-height: 175px;
+	margin: 10px 0;
 	flex-grow: 1;
 	letter-spacing: 1px;
-	transition: 0.5s;
+	border-bottom: solid 1px #6f6f6f;
 }
 
-.form-box input[type="text"]:focus,
-.form-box input[type="email"]:focus,
-.form-box textarea:focus{
-	outline: none;
+.form_box input[type="email"]::placeholder,
+.form_box input[type="text"]::placeholder,
+.form_box textarea::placeholder{
+	color: #333333;
+	opacity: 1;
 }
-
-.form-box input[type="submit"]{
-	margin: 18px 0 0 0;
-	width: auto;
-	display: block;
-	padding: 14px 17px;
-	text-align: center;
+	
+.form_box input[type="submit"]{
 	font-family: 'Montserrat' , Arial, sans-serif;
 	font-size: 14px;
 	font-weight: 600;
 	text-transform: uppercase;
+	margin: 10px 0;
+	width: 160px;
+	height: 40px;
+	text-align: center;
 	color: #ffffff;
 	letter-spacing: 1px;
-	background-color: #009fff;
-	border: solid 1px #009fff;
-	border-radius: 0;
+	background-color: #1488cc;
+	border: solid 1px #1488cc;
+	border-radius: 5px;
 	transition: 0.5s;
 }
 
-.form-box input[type="submit"]:hover{
-	background: transparent;
+.form_box input[type="submit"]:hover{
+	background-color: #ffffff;
 	color: #111111;
 	border-color: #111111;
-}
-
-/* --- 3.4. Contact Area Four --- */
-.contact_area_four{
-	position: relative;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-	min-height: 300px;
-	background-color: #009fff;
-	margin-bottom: 2em;
-	padding: 2em 0;
-}
-
-.contact_group_four{
-	max-width: 1280px;
-	margin: auto;
-	padding: 0 25px;
-	width: 100%;
-}
-
-.icon_area{
-	width: 100%;
-	display: flex; 
-	flex-wrap: wrap;
-}
-
-.icon_col{
-	flex: 25%;
-	width: 25%;
-	padding: 25px;
-}
-
-.icon_box{
-	max-width: 250px;
-	margin: auto;
-	padding: 0;
-}
-
-.icon_box .fas,
-.icon_box .far{
-	font-size: 30px;
-	color: #ffffff;
-	text-align: center;
-	display: block;
-}
-
-.icon_box h3{
-	color: #f2f2f2;
-	font-family: 'Montserrat' , Arial, sans-serif;
-	font-size: 15px;
-	font-weight: 600;
-	display: block;
-	text-align: center;
-	letter-spacing: 1px;
-	line-height: 1.4em;
-	text-transform: uppercase;
 }
 
 /* 4. FOOTER
@@ -755,15 +648,16 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	position: relative;
 	clear: both;
 	height: 100%;
+	background-color: #111111;
 }
 
 .footer_area{
-	max-width: 1200px;
+	max-width: 1280px;
 	margin: 0 auto;
 	padding: 0 25px;
 	display: flex;
 	flex-wrap: wrap;
-	margin: 0 auto;
+	padding-top: 14em;
 }
 
 .footer_col{
@@ -775,13 +669,15 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 }
 
 .footer_col{
-	padding-top: 3.5em;
+	padding-top: 4.5em;
 }
 
-a.footer-brand img{
-	max-width: 200px;
+a.footer-logo img{
+	max-width: 150px;
 	height: auto;
-	display: block;
+	display: inline-block;
+	margin-top: 12px;
+	margin-bottom: 10px;
 }
 
 .footer_box > h3 > a{
@@ -791,16 +687,16 @@ a.footer-brand img{
 	letter-spacing: 1px;
 	text-transform: uppercase;
 	text-decoration: none;
-	color: #111111;
+	color: #ffffff;
 	text-align: left;
 }
 
 .footer_box > p{
 	font-family: 'Montserrat', Arial, sans-serif;
 	font-size: 14px;
-	font-weight: normal;
+	font-weight: 500;
 	letter-spacing: 1px;
-	color: #111111;
+	color: #ffffff;
 	text-align: left;
 	padding: 20px 0;
 	line-height: 1.5em;
@@ -810,26 +706,21 @@ a.footer-brand img{
 	margin: 12px 0;
 }
 
-.footer_social .fab,
-.footer_social .fa{
+.footer_social > a > .fab,
+.footer_social > a > .fa{
 	font-size: 16px;
-	color: #111111;
+	color: #ffffff;
 	text-align: left;
+	transition: 0.5s;
 }
 
 .footer_social > a{
 	padding-right: 12px;
 }
 
-.footer_social > a:hover{
-	opacity: 0.6;
-}
-
-.final{
-	display: flex;
-	flex-direction: row;
-	justify-content: flex-start;
-	align-items: center;
+.footer_social > a > .fab:hover,
+.footer_social > a > .fa:hover{
+	color: #1488cc;
 }
 
 .footer_col > h4{
@@ -837,8 +728,7 @@ a.footer-brand img{
 	font-size: 18px;
 	font-weight: 700;
 	letter-spacing: 1px;
-	color: #111111;
-	line-height: 1.4em;
+	color: #ffffff;
 }
 
 .footer_col > ul > li{
@@ -848,34 +738,41 @@ a.footer-brand img{
 .footer_col > ul > li a{
 	font-family: 'Montserrat', Arial, sans-serif;
 	font-size: 13px;
-	font-weight: normal;
+	font-weight: 500;
 	letter-spacing: 1px;
 	text-decoration: none;
-	color: #111111;
+	color: #ffffff;
 	text-align: justify;
 	transition: 0.5s;
 }
 
 .footer_col > ul > li a:hover{
-	opacity: 0.6;
+	color: #1488cc;
 }
 
-.form-row{
-	text-align: right;
+.subscribe-row{
+	text-align: left;
 }
 
 .col_info input[type="email"]{
 	display: block;
 	width: 100%;
-	padding: 12px 10px 14px;
-	background-color: #f6f6f6;
+	height: 50px;
+	padding: 14px;
+	padding-left: 0;
+	background: transparent;
 	border: none;
+	border-bottom: solid 1px #ffffff;
 	font-family: 'Montserrat' , Arial, sans-serif;
 	font-size: 13px;
-	font-weight: 600;
-	color: #333333;
-	text-transform: capitalize;
+	font-weight: normal;
+	color: #dddddd;
 	letter-spacing: 1px;
+}
+
+.col_info input[type="email"]::placeholder{
+	color: #dddddd;
+	opacity: 1;
 }
 
 .col_info{
@@ -883,32 +780,29 @@ a.footer-brand img{
 }
 
 .col_info input[type="submit"]{
-	display: inline-block;
-	padding: 10px 14px;
+	padding: 12px 14px;
+	width: 135px;
 	text-align: center;
+	text-transform: uppercase;
 	font-family: 'Montserrat' , Arial, sans-serif;
 	font-size: 14px;
-	font-weight: 500;
+	font-weight: 600;
 	margin-top: 20px;
-	text-transform: uppercase;
-	width: 100%;
-	margin-left: 0;
 	color: #ffffff;
-	border-radius: 0;
 	letter-spacing: 1px;
-	background-color: #009fff;
-	border: solid 1px #ffffff;
+	background-color: #1488cc;
+	border-radius: 0;
+	border: solid 1px #1488cc;
 	transition: 0.5s;
 }
 
 .col_info input[type="submit"]:hover{
-	background: transparent;
+	background-color: #ffffff;
 	color: #111111;
-	border-color: #111111;
+	border-color: #ffffff;
 }
 
 .col_info input[type="email"]:focus{
-	outline: none;
 	box-shadow: 0 0 0 2px #e0e0e0;
 }
 
@@ -917,7 +811,8 @@ a.footer-brand img{
 	padding-top: 35px;
 	padding-bottom: 10px;
 	margin-top: 35px;
-	border-top: solid 1px #e0e0e0;
+	border-top: solid 1px #ffffff;
+	
 }
 
 .details p{
@@ -925,38 +820,19 @@ a.footer-brand img{
 	font-size: 13px;
 	font-weight: normal;
 	letter-spacing: 1px;
-	color: #111111;
+	color: #ffffff;
 	text-align: center;
 }
 
 /* 5. RESPONSIVE
  ----------- */
-@media only screen and (max-width: 1024px){
-	.header__content{
-		height: auto;
-	}
-	
-	.slide__content{
-		height: auto;
-	}
-	
-	.bg_col{
-		flex: 50%;
-		width: 50%;
-		margin-bottom: 20px;
-	}
-	
-	.icon_col{
-		flex: 50%;
-		width: 50%;
-	}
-}
-
 @media only screen and (max-width: 992px){
 	nav.navbar.bootsnav .navbar-toggle{
         background: transparent;
         color: #ffffff;
 		font-size: 25px;
+		margin-top: 7px;
+		margin-bottom: 12px;
 	}
 	
 	.head_btn{	
@@ -969,10 +845,15 @@ a.footer-brand img{
 	.head_btn a:hover{
 		background: transparent;
 		border-color: #111111;
+		color: #111111;
 	}
 	
-	.navbar-header a.navbar-brand{
-		padding-top: 22px;
+	.navbar-header > a{
+		margin-top: 14px;
+	}
+	
+	#nav-logo > a{
+		top: 19px;
 	}
 	
 	nav.navbar.bootsnav ul.nav > li > a{
@@ -1035,16 +916,28 @@ a.footer-brand img{
 	.attr-nav > ul > li > a{
 		position: relative;
 		left: 0;
-		padding-top: 25px;
+		padding-top: 21px;
 	}
 	
-	.contact_form_col{
+	.bg_col{
+		flex: 50%;
+		width: 50%;
+	}
+	
+	.area_col{
 		flex: 100%;
 		width: 100%;
 	}
 	
-	.form_area{
-		margin-bottom: 20px;
+	.form_col{
+		flex: 100%;
+		width: 100%;
+		margin-top: 40px;
+	}
+	
+	.contact_group_two{
+		max-width: 600px;
+		margin: 0 auto;
 	}
 	
 	.footer_col{
@@ -1054,20 +947,25 @@ a.footer-brand img{
 }
 
 @media only screen and (max-width: 600px){
-	.header-title__main,
-	.form_col_box h2{
+	.header-title__main{
 		font-size: 30px;
 	}
 	
 	.bg_col{
 		flex: 100%;
 		width: 100%;
-		padding: 0;
 	}
 	
-	.icon_col{
-		flex: 100%;
-		width: 100%;
+	.form-row {
+		flex-direction: column;
+	}
+	
+	#right-space{
+		margin-right: 0;
+	}
+	
+	#left-space{
+		margin-left: 0;
 	}
 	
 	.footer_col{
@@ -1075,4 +973,11 @@ a.footer-brand img{
 		width: 100%;
 		margin: 0;
 	}
-} 
+}
+
+@media only screen and (max-width: 420px){
+	.form_box{
+		padding-left: 0;
+		padding-right: 0;
+	}
+}
